avoid double up events for static text, fixes #14902

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73189 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775